tests/rosetta/out/Smalltalk/ascii-art-diagram-converter.out
/workspace/mochi/tests/rosetta/out/Smalltalk/ascii-art-diagram-converter.st:4: parse error, expected '|' or identifier
