tests/rosetta/out/Smalltalk/ascii-art-diagram-converter.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| main |
main := [ | Transcript show: 'Diagram after trimming whitespace and removal of blank lines:
'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '|                      ID                       |'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '|QR|   Opcode  |AA|TC|RD|RA|   Z    |   RCODE   |'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '|                    QDCOUNT                    |'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '|                    ANCOUNT                    |'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '|                    NSCOUNT                    |'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '|                    ARCOUNT                    |'; cr.
Transcript show: '+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+'; cr.
Transcript show: '
Decoded:
'; cr.
Transcript show: 'Name     Bits  Start  End'; cr.
Transcript show: '=======  ====  =====  ==='; cr.
Transcript show: 'ID        16      0    15'; cr.
Transcript show: 'QR         1     16    16'; cr.
Transcript show: 'Opcode     4     17    20'; cr.
Transcript show: 'AA         1     21    21'; cr.
Transcript show: 'TC         1     22    22'; cr.
Transcript show: 'RD         1     23    23'; cr.
Transcript show: 'RA         1     24    24'; cr.
Transcript show: 'Z          3     25    27'; cr.
Transcript show: 'RCODE      4     28    31'; cr.
Transcript show: 'QDCOUNT   16     32    47'; cr.
Transcript show: 'ANCOUNT   16     48    63'; cr.
Transcript show: 'NSCOUNT   16     64    79'; cr.
Transcript show: 'ARCOUNT   16     80    95'; cr.
Transcript show: '
Test string in hex:'; cr.
Transcript show: '78477bbf5496e12e1bf169a4'; cr.
Transcript show: '
Test string in binary:'; cr.
Transcript show: '011110000100011101111011101111110101010010010110111000010010111000011011111100010110100110100100'; cr.
Transcript show: '
Unpacked:
'; cr.
Transcript show: 'Name     Size  Bit pattern'; cr.
Transcript show: '=======  ====  ================'; cr.
Transcript show: 'ID        16   0111100001000111'; cr.
Transcript show: 'QR         1   0'; cr.
Transcript show: 'Opcode     4   1111'; cr.
Transcript show: 'AA         1   0'; cr.
Transcript show: 'TC         1   1'; cr.
Transcript show: 'RD         1   1'; cr.
Transcript show: 'RA         1   1'; cr.
Transcript show: 'Z          3   011'; cr.
Transcript show: 'RCODE      4   1111'; cr.
Transcript show: 'QDCOUNT   16   0101010010010110'; cr.
Transcript show: 'ANCOUNT   16   1110000100101110'; cr.
Transcript show: 'NSCOUNT   16   0001101111110001'; cr.
Transcript show: 'ARCOUNT   16   0110100110100100'; cr. ].
main value.
